--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Happy Birthday to you Shimonty 🥰</title>
+	<title>Happy Birthday to you Shimonty 🎂🎈🎉</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday to you Shimonty">
 	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
